As a follow-up to https://crbug.com/477868 , MixedContentChecker::handleCertificateError() should print a console message explaining that a subresource was loaded over broken HTTPS.
This is a follow-up to the patches in issue 477868 .
The following revision refers to this bug: https://chromium.googlesource.com/chromium/src.git/+/dcfa99386d0b0f91107fdb8c248be833ba18fd25 commit dcfa99386d0b0f91107fdb8c248be833ba18fd25 Author: Livvie Lin <livvielin@chromium.org> Date: Thu Dec 06 01:10:39 2018 Add console message in MixedContentChecker::HandleCertificateError Print console message when subresources are loaded over broken HTTPS. Screenshot: https://drive.google.com/file/d/1Sn_2c162NmvCoIXFuFVB68z-MhzphcNT/view?usp=sharing Bug: 587168 Change-Id: I997a8da26f0fe015cc0103b96dcbaa7d40525eb8 Reviewed-on: https://chromium-review.googlesource.com/c/1306779 Commit-Queue: Livvie Lin <livvielin@chromium.org> Reviewed-by: Mustafa Emre Acer <meacer@chromium.org> Reviewed-by: Yutaka Hirano <yhirano@chromium.org> Reviewed-by: Mike West <mkwst@chromium.org> Reviewed-by: Scott Violet <sky@chromium.org> Reviewed-by: Nate Chapin <japhet@chromium.org> Cr-Commit-Position: refs/heads/master@{#614212} [modify] https://crrev.com/dcfa99386d0b0f91107fdb8c248be833ba18fd25/chrome/browser/favicon/content_favicon_driver_browsertest.cc [modify] https://crrev.com/dcfa99386d0b0f91107fdb8c248be833ba18fd25/chrome/browser/ssl/ssl_browsertest.cc [modify] https://crrev.com/dcfa99386d0b0f91107fdb8c248be833ba18fd25/third_party/blink/renderer/core/loader/mixed_content_checker.cc [modify] https://crrev.com/dcfa99386d0b0f91107fdb8c248be833ba18fd25/third_party/blink/web_tests/http/tests/cache/history-only-cached-subresource-loads-max-age-https-expected.txt [modify] https://crrev.com/dcfa99386d0b0f91107fdb8c248be833ba18fd25/third_party/blink/web_tests/http/tests/fetch/serviceworker/thorough/scheme-blob-base-https-other-https-expected.txt [modify] https://crrev.com/dcfa99386d0b0f91107fdb8c248be833ba18fd25/third_party/blink/web_tests/http/tests/fetch/serviceworker/thorough/scheme-blob-expected.txt [modify] https://crrev.com/dcfa99386d0b0f91107fdb8c248be833ba18fd25/third_party/blink/web_tests/http/tests/fetch/serviceworker/thorough/scheme-blob-other-https-expected.txt [modify] https://crrev.com/dcfa99386d0b0f91107fdb8c248be833ba18fd25/third_party/blink/web_tests/http/tests/mixed-autoupgrade/optionally/image-upgrade-console-message.https-expected.txt [modify] https://crrev.com/dcfa99386d0b0f91107fdb8c248be833ba18fd25/third_party/blink/web_tests/http/tests/navigation/ping-cross-origin-from-https-expected.txt [modify] https://crrev.com/dcfa99386d0b0f91107fdb8c248be833ba18fd25/third_party/blink/web_tests/http/tests/security/contentSecurityPolicy/register-bypassing-scheme-script.https-expected.txt [modify] https://crrev.com/dcfa99386d0b0f91107fdb8c248be833ba18fd25/third_party/blink/web_tests/http/tests/security/mixedContent/active-subresource-in-iframe-blocked.https-expected.txt [modify] https://crrev.com/dcfa99386d0b0f91107fdb8c248be833ba18fd25/third_party/blink/web_tests/http/tests/security/mixedContent/insecure-css-image-with-reload-expected.txt [modify] https://crrev.com/dcfa99386d0b0f91107fdb8c248be833ba18fd25/third_party/blink/web_tests/http/tests/security/mixedContent/insecure-css-resources-expected.txt [modify] https://crrev.com/dcfa99386d0b0f91107fdb8c248be833ba18fd25/third_party/blink/web_tests/http/tests/security/mixedContent/insecure-fetch-on-dedicated-worker-allowed.https-expected.txt [modify] https://crrev.com/dcfa99386d0b0f91107fdb8c248be833ba18fd25/third_party/blink/web_tests/http/tests/security/mixedContent/insecure-fetch-on-dedicated-worker-blocked.https-expected.txt [modify] https://crrev.com/dcfa99386d0b0f91107fdb8c248be833ba18fd25/third_party/blink/web_tests/http/tests/security/mixedContent/insecure-iframe-with-hsts.https-expected.txt [modify] https://crrev.com/dcfa99386d0b0f91107fdb8c248be833ba18fd25/third_party/blink/web_tests/http/tests/security/mixedContent/redirect-http-to-https-iframe-in-main-frame-expected.txt [modify] https://crrev.com/dcfa99386d0b0f91107fdb8c248be833ba18fd25/third_party/blink/web_tests/http/tests/security/mixedContent/redirect-http-to-https-script-in-iframe-expected.txt [modify] https://crrev.com/dcfa99386d0b0f91107fdb8c248be833ba18fd25/third_party/blink/web_tests/http/tests/security/mixedContent/redirect-https-to-http-iframe-in-main-frame-expected.txt [modify] https://crrev.com/dcfa99386d0b0f91107fdb8c248be833ba18fd25/third_party/blink/web_tests/http/tests/security/mixedContent/strict-mode-image-in-frame-blocked.https-expected.txt [modify] https://crrev.com/dcfa99386d0b0f91107fdb8c248be833ba18fd25/third_party/blink/web_tests/http/tests/security/referrer-on-client-redirect-expected.txt [add] https://crrev.com/dcfa99386d0b0f91107fdb8c248be833ba18fd25/third_party/blink/web_tests/http/tests/security/referrer-policy-attribute-img-no-referrer-when-downgrade-expected.txt [modify] https://crrev.com/dcfa99386d0b0f91107fdb8c248be833ba18fd25/third_party/blink/web_tests/http/tests/security/xssAuditor/report-script-tag-cross-origin-https-expected.txt
The following revision refers to this bug: https://chromium.googlesource.com/chromium/src.git/+/e092dc1b1477a1192745054d5885eb50cdfd8b2f commit e092dc1b1477a1192745054d5885eb50cdfd8b2f Author: Rakina Zata Amni <rakina@chromium.org> Date: Thu Dec 06 08:59:45 2018 Revert "Add console message in MixedContentChecker::HandleCertificateError" This reverts commit dcfa99386d0b0f91107fdb8c248be833ba18fd25. Reason for revert: Caused flaky tests: crbug.com/912431 Original change's description: > Add console message in MixedContentChecker::HandleCertificateError > > Print console message when subresources are loaded over broken HTTPS. > Screenshot: https://drive.google.com/file/d/1Sn_2c162NmvCoIXFuFVB68z-MhzphcNT/view?usp=sharing > > Bug: 587168 > Change-Id: I997a8da26f0fe015cc0103b96dcbaa7d40525eb8 > Reviewed-on: https://chromium-review.googlesource.com/c/1306779 > Commit-Queue: Livvie Lin <livvielin@chromium.org> > Reviewed-by: Mustafa Emre Acer <meacer@chromium.org> > Reviewed-by: Yutaka Hirano <yhirano@chromium.org> > Reviewed-by: Mike West <mkwst@chromium.org> > Reviewed-by: Scott Violet <sky@chromium.org> > Reviewed-by: Nate Chapin <japhet@chromium.org> > Cr-Commit-Position: refs/heads/master@{#614212} TBR=sky@chromium.org,meacer@chromium.org,yhirano@chromium.org,japhet@chromium.org,mkwst@chromium.org,livvielin@chromium.org Change-Id: I9142c895af7dd1c6a4c9ea7500ee0eca2ce9d118 No-Presubmit: true No-Tree-Checks: true No-Try: true Bug: 587168, 912431 Reviewed-on: https://chromium-review.googlesource.com/c/1364974 Reviewed-by: Rakina Zata Amni <rakina@chromium.org> Commit-Queue: Rakina Zata Amni <rakina@chromium.org> Cr-Commit-Position: refs/heads/master@{#614290} [modify] https://crrev.com/e092dc1b1477a1192745054d5885eb50cdfd8b2f/chrome/browser/favicon/content_favicon_driver_browsertest.cc [modify] https://crrev.com/e092dc1b1477a1192745054d5885eb50cdfd8b2f/chrome/browser/ssl/ssl_browsertest.cc [modify] https://crrev.com/e092dc1b1477a1192745054d5885eb50cdfd8b2f/third_party/blink/renderer/core/loader/mixed_content_checker.cc [modify] https://crrev.com/e092dc1b1477a1192745054d5885eb50cdfd8b2f/third_party/blink/web_tests/http/tests/cache/history-only-cached-subresource-loads-max-age-https-expected.txt [modify] https://crrev.com/e092dc1b1477a1192745054d5885eb50cdfd8b2f/third_party/blink/web_tests/http/tests/fetch/serviceworker/thorough/scheme-blob-base-https-other-https-expected.txt [modify] https://crrev.com/e092dc1b1477a1192745054d5885eb50cdfd8b2f/third_party/blink/web_tests/http/tests/fetch/serviceworker/thorough/scheme-blob-expected.txt [modify] https://crrev.com/e092dc1b1477a1192745054d5885eb50cdfd8b2f/third_party/blink/web_tests/http/tests/fetch/serviceworker/thorough/scheme-blob-other-https-expected.txt [modify] https://crrev.com/e092dc1b1477a1192745054d5885eb50cdfd8b2f/third_party/blink/web_tests/http/tests/mixed-autoupgrade/optionally/image-upgrade-console-message.https-expected.txt [modify] https://crrev.com/e092dc1b1477a1192745054d5885eb50cdfd8b2f/third_party/blink/web_tests/http/tests/navigation/ping-cross-origin-from-https-expected.txt [modify] https://crrev.com/e092dc1b1477a1192745054d5885eb50cdfd8b2f/third_party/blink/web_tests/http/tests/security/contentSecurityPolicy/register-bypassing-scheme-script.https-expected.txt [modify] https://crrev.com/e092dc1b1477a1192745054d5885eb50cdfd8b2f/third_party/blink/web_tests/http/tests/security/mixedContent/active-subresource-in-iframe-blocked.https-expected.txt [modify] https://crrev.com/e092dc1b1477a1192745054d5885eb50cdfd8b2f/third_party/blink/web_tests/http/tests/security/mixedContent/insecure-css-image-with-reload-expected.txt [modify] https://crrev.com/e092dc1b1477a1192745054d5885eb50cdfd8b2f/third_party/blink/web_tests/http/tests/security/mixedContent/insecure-css-resources-expected.txt [modify] https://crrev.com/e092dc1b1477a1192745054d5885eb50cdfd8b2f/third_party/blink/web_tests/http/tests/security/mixedContent/insecure-fetch-on-dedicated-worker-allowed.https-expected.txt [modify] https://crrev.com/e092dc1b1477a1192745054d5885eb50cdfd8b2f/third_party/blink/web_tests/http/tests/security/mixedContent/insecure-fetch-on-dedicated-worker-blocked.https-expected.txt [modify] https://crrev.com/e092dc1b1477a1192745054d5885eb50cdfd8b2f/third_party/blink/web_tests/http/tests/security/mixedContent/insecure-iframe-with-hsts.https-expected.txt [modify] https://crrev.com/e092dc1b1477a1192745054d5885eb50cdfd8b2f/third_party/blink/web_tests/http/tests/security/mixedContent/redirect-http-to-https-iframe-in-main-frame-expected.txt [modify] https://crrev.com/e092dc1b1477a1192745054d5885eb50cdfd8b2f/third_party/blink/web_tests/http/tests/security/mixedContent/redirect-http-to-https-script-in-iframe-expected.txt [modify] https://crrev.com/e092dc1b1477a1192745054d5885eb50cdfd8b2f/third_party/blink/web_tests/http/tests/security/mixedContent/redirect-https-to-http-iframe-in-main-frame-expected.txt [modify] https://crrev.com/e092dc1b1477a1192745054d5885eb50cdfd8b2f/third_party/blink/web_tests/http/tests/security/mixedContent/strict-mode-image-in-frame-blocked.https-expected.txt [modify] https://crrev.com/e092dc1b1477a1192745054d5885eb50cdfd8b2f/third_party/blink/web_tests/http/tests/security/referrer-on-client-redirect-expected.txt [delete] https://crrev.com/8fea47aacf80c5e06dc7246a9b3673525cf14b62/third_party/blink/web_tests/http/tests/security/referrer-policy-attribute-img-no-referrer-when-downgrade-expected.txt [modify] https://crrev.com/e092dc1b1477a1192745054d5885eb50cdfd8b2f/third_party/blink/web_tests/http/tests/security/xssAuditor/report-script-tag-cross-origin-https-expected.txt
The following revision refers to this bug: https://chromium.googlesource.com/chromium/src.git/+/7b019e69abc493d78f885ead55889feac68d0f53 commit 7b019e69abc493d78f885ead55889feac68d0f53 Author: Livvie Lin <livvielin@chromium.org> Date: Thu Dec 13 23:07:01 2018 Reland "Add console message in MixedContentChecker::HandleCertificateError" This is a reland of dcfa99386d0b0f91107fdb8c248be833ba18fd25. The only diff is that the -expected.txt files for serviceworker/thorough/scheme-blob-* have been removed (context in crbug.com/914679 ) Original change's description: > Add console message in MixedContentChecker::HandleCertificateError > > Print console message when subresources are loaded over broken HTTPS. > Screenshot: https://drive.google.com/file/d/1Sn_2c162NmvCoIXFuFVB68z-MhzphcNT/view?usp=sharing > > Bug: 587168 > Change-Id: I997a8da26f0fe015cc0103b96dcbaa7d40525eb8 > Reviewed-on: https://chromium-review.googlesource.com/c/1306779 > Commit-Queue: Livvie Lin <livvielin@chromium.org> > Reviewed-by: Mustafa Emre Acer <meacer@chromium.org> > Reviewed-by: Yutaka Hirano <yhirano@chromium.org> > Reviewed-by: Mike West <mkwst@chromium.org> > Reviewed-by: Scott Violet <sky@chromium.org> > Reviewed-by: Nate Chapin <japhet@chromium.org> > Cr-Commit-Position: refs/heads/master@{#614212} TBR=meacer@chromium.org, sky@chromium.org, yhirano@chromium.org, japhet@chromium.org, mkwst@chromium.org Bug: 587168 Change-Id: I9ecb83b0e6a5d48cdc9b769b971f5da81c82bb62 Reviewed-on: https://chromium-review.googlesource.com/c/1366175 Commit-Queue: Carlos IL <carlosil@chromium.org> Reviewed-by: Carlos IL <carlosil@chromium.org> Cr-Commit-Position: refs/heads/master@{#616470} [modify] https://crrev.com/7b019e69abc493d78f885ead55889feac68d0f53/chrome/browser/favicon/content_favicon_driver_browsertest.cc [modify] https://crrev.com/7b019e69abc493d78f885ead55889feac68d0f53/chrome/browser/ssl/ssl_browsertest.cc [modify] https://crrev.com/7b019e69abc493d78f885ead55889feac68d0f53/third_party/blink/renderer/core/loader/mixed_content_checker.cc [modify] https://crrev.com/7b019e69abc493d78f885ead55889feac68d0f53/third_party/blink/web_tests/http/tests/cache/history-only-cached-subresource-loads-max-age-https-expected.txt [modify] https://crrev.com/7b019e69abc493d78f885ead55889feac68d0f53/third_party/blink/web_tests/http/tests/mixed-autoupgrade/optionally/image-upgrade-console-message.https-expected.txt [modify] https://crrev.com/7b019e69abc493d78f885ead55889feac68d0f53/third_party/blink/web_tests/http/tests/navigation/ping-cross-origin-from-https-expected.txt [modify] https://crrev.com/7b019e69abc493d78f885ead55889feac68d0f53/third_party/blink/web_tests/http/tests/security/contentSecurityPolicy/register-bypassing-scheme-script.https-expected.txt [modify] https://crrev.com/7b019e69abc493d78f885ead55889feac68d0f53/third_party/blink/web_tests/http/tests/security/mixedContent/active-subresource-in-iframe-blocked.https-expected.txt [modify] https://crrev.com/7b019e69abc493d78f885ead55889feac68d0f53/third_party/blink/web_tests/http/tests/security/mixedContent/insecure-css-image-with-reload-expected.txt [modify] https://crrev.com/7b019e69abc493d78f885ead55889feac68d0f53/third_party/blink/web_tests/http/tests/security/mixedContent/insecure-css-resources-expected.txt [modify] https://crrev.com/7b019e69abc493d78f885ead55889feac68d0f53/third_party/blink/web_tests/http/tests/security/mixedContent/insecure-fetch-on-dedicated-worker-allowed.https-expected.txt [modify] https://crrev.com/7b019e69abc493d78f885ead55889feac68d0f53/third_party/blink/web_tests/http/tests/security/mixedContent/insecure-fetch-on-dedicated-worker-blocked.https-expected.txt [modify] https://crrev.com/7b019e69abc493d78f885ead55889feac68d0f53/third_party/blink/web_tests/http/tests/security/mixedContent/insecure-iframe-with-hsts.https-expected.txt [modify] https://crrev.com/7b019e69abc493d78f885ead55889feac68d0f53/third_party/blink/web_tests/http/tests/security/mixedContent/redirect-http-to-https-iframe-in-main-frame-expected.txt [modify] https://crrev.com/7b019e69abc493d78f885ead55889feac68d0f53/third_party/blink/web_tests/http/tests/security/mixedContent/redirect-http-to-https-script-in-iframe-expected.txt [modify] https://crrev.com/7b019e69abc493d78f885ead55889feac68d0f53/third_party/blink/web_tests/http/tests/security/mixedContent/redirect-https-to-http-iframe-in-main-frame-expected.txt [modify] https://crrev.com/7b019e69abc493d78f885ead55889feac68d0f53/third_party/blink/web_tests/http/tests/security/mixedContent/strict-mode-image-in-frame-blocked.https-expected.txt [modify] https://crrev.com/7b019e69abc493d78f885ead55889feac68d0f53/third_party/blink/web_tests/http/tests/security/referrer-on-client-redirect-expected.txt [add] https://crrev.com/7b019e69abc493d78f885ead55889feac68d0f53/third_party/blink/web_tests/http/tests/security/referrer-policy-attribute-img-no-referrer-when-downgrade-expected.txt [modify] https://crrev.com/7b019e69abc493d78f885ead55889feac68d0f53/third_party/blink/web_tests/http/tests/security/xssAuditor/report-script-tag-cross-origin-https-expected.txt
The following revision refers to this bug: https://chromium.googlesource.com/chromium/src.git/+/dd878111819095d5b2e5ad92eb0d06d77916b0c0 commit dd878111819095d5b2e5ad92eb0d06d77916b0c0 Author: Livvie Lin <livvielin@chromium.org> Date: Fri Dec 14 10:55:35 2018 Revert "Reland "Add console message in MixedContentChecker::HandleCertificateError"" This reverts commit 7b019e69abc493d78f885ead55889feac68d0f53. Reason for revert: Causes flaky test ( crbug.com/915134 ) Original change's description: > Reland "Add console message in MixedContentChecker::HandleCertificateError" > > This is a reland of dcfa99386d0b0f91107fdb8c248be833ba18fd25. The only diff is that the > -expected.txt files for serviceworker/thorough/scheme-blob-* have been removed (context > in crbug.com/914679 ) > > Original change's description: > > Add console message in MixedContentChecker::HandleCertificateError > > > > Print console message when subresources are loaded over broken HTTPS. > > Screenshot: https://drive.google.com/file/d/1Sn_2c162NmvCoIXFuFVB68z-MhzphcNT/view?usp=sharing > > > > Bug: 587168 > > Change-Id: I997a8da26f0fe015cc0103b96dcbaa7d40525eb8 > > Reviewed-on: https://chromium-review.googlesource.com/c/1306779 > > Commit-Queue: Livvie Lin <livvielin@chromium.org> > > Reviewed-by: Mustafa Emre Acer <meacer@chromium.org> > > Reviewed-by: Yutaka Hirano <yhirano@chromium.org> > > Reviewed-by: Mike West <mkwst@chromium.org> > > Reviewed-by: Scott Violet <sky@chromium.org> > > Reviewed-by: Nate Chapin <japhet@chromium.org> > > Cr-Commit-Position: refs/heads/master@{#614212} > > TBR=meacer@chromium.org, sky@chromium.org, yhirano@chromium.org, japhet@chromium.org, mkwst@chromium.org > > Bug: 587168 > Change-Id: I9ecb83b0e6a5d48cdc9b769b971f5da81c82bb62 > Reviewed-on: https://chromium-review.googlesource.com/c/1366175 > Commit-Queue: Carlos IL <carlosil@chromium.org> > Reviewed-by: Carlos IL <carlosil@chromium.org> > Cr-Commit-Position: refs/heads/master@{#616470} TBR=sky@chromium.org,meacer@chromium.org,yhirano@chromium.org,japhet@chromium.org,mkwst@chromium.org,carlosil@chromium.org,livvielin@chromium.org Change-Id: Ifab143df9fdcc2c21b585990885c32e9daca4040 No-Presubmit: true No-Tree-Checks: true No-Try: true Bug: 587168 Reviewed-on: https://chromium-review.googlesource.com/c/1377604 Reviewed-by: Morten Stenshorne <mstensho@chromium.org> Commit-Queue: Morten Stenshorne <mstensho@chromium.org> Cr-Commit-Position: refs/heads/master@{#616632} [modify] https://crrev.com/dd878111819095d5b2e5ad92eb0d06d77916b0c0/chrome/browser/favicon/content_favicon_driver_browsertest.cc [modify] https://crrev.com/dd878111819095d5b2e5ad92eb0d06d77916b0c0/chrome/browser/ssl/ssl_browsertest.cc [modify] https://crrev.com/dd878111819095d5b2e5ad92eb0d06d77916b0c0/third_party/blink/renderer/core/loader/mixed_content_checker.cc [modify] https://crrev.com/dd878111819095d5b2e5ad92eb0d06d77916b0c0/third_party/blink/web_tests/http/tests/cache/history-only-cached-subresource-loads-max-age-https-expected.txt [modify] https://crrev.com/dd878111819095d5b2e5ad92eb0d06d77916b0c0/third_party/blink/web_tests/http/tests/mixed-autoupgrade/optionally/image-upgrade-console-message.https-expected.txt [modify] https://crrev.com/dd878111819095d5b2e5ad92eb0d06d77916b0c0/third_party/blink/web_tests/http/tests/navigation/ping-cross-origin-from-https-expected.txt [modify] https://crrev.com/dd878111819095d5b2e5ad92eb0d06d77916b0c0/third_party/blink/web_tests/http/tests/security/contentSecurityPolicy/register-bypassing-scheme-script.https-expected.txt [modify] https://crrev.com/dd878111819095d5b2e5ad92eb0d06d77916b0c0/third_party/blink/web_tests/http/tests/security/mixedContent/active-subresource-in-iframe-blocked.https-expected.txt [modify] https://crrev.com/dd878111819095d5b2e5ad92eb0d06d77916b0c0/third_party/blink/web_tests/http/tests/security/mixedContent/insecure-css-image-with-reload-expected.txt [modify] https://crrev.com/dd878111819095d5b2e5ad92eb0d06d77916b0c0/third_party/blink/web_tests/http/tests/security/mixedContent/insecure-css-resources-expected.txt [modify] https://crrev.com/dd878111819095d5b2e5ad92eb0d06d77916b0c0/third_party/blink/web_tests/http/tests/security/mixedContent/insecure-fetch-on-dedicated-worker-allowed.https-expected.txt [modify] https://crrev.com/dd878111819095d5b2e5ad92eb0d06d77916b0c0/third_party/blink/web_tests/http/tests/security/mixedContent/insecure-fetch-on-dedicated-worker-blocked.https-expected.txt [modify] https://crrev.com/dd878111819095d5b2e5ad92eb0d06d77916b0c0/third_party/blink/web_tests/http/tests/security/mixedContent/insecure-iframe-with-hsts.https-expected.txt [modify] https://crrev.com/dd878111819095d5b2e5ad92eb0d06d77916b0c0/third_party/blink/web_tests/http/tests/security/mixedContent/redirect-http-to-https-iframe-in-main-frame-expected.txt [modify] https://crrev.com/dd878111819095d5b2e5ad92eb0d06d77916b0c0/third_party/blink/web_tests/http/tests/security/mixedContent/redirect-http-to-https-script-in-iframe-expected.txt [modify] https://crrev.com/dd878111819095d5b2e5ad92eb0d06d77916b0c0/third_party/blink/web_tests/http/tests/security/mixedContent/redirect-https-to-http-iframe-in-main-frame-expected.txt [modify] https://crrev.com/dd878111819095d5b2e5ad92eb0d06d77916b0c0/third_party/blink/web_tests/http/tests/security/mixedContent/strict-mode-image-in-frame-blocked.https-expected.txt [modify] https://crrev.com/dd878111819095d5b2e5ad92eb0d06d77916b0c0/third_party/blink/web_tests/http/tests/security/referrer-on-client-redirect-expected.txt [delete] https://crrev.com/1794d6d608c8fb5ff76b8c5788ec0f4bff4ef265/third_party/blink/web_tests/http/tests/security/referrer-policy-attribute-img-no-referrer-when-downgrade-expected.txt [modify] https://crrev.com/dd878111819095d5b2e5ad92eb0d06d77916b0c0/third_party/blink/web_tests/http/tests/security/xssAuditor/report-script-tag-cross-origin-https-expected.txt
Comment 1 by est...@chromium.org, Feb 16 2016